k8s/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todo-api
  template:
    metadata:
      labels:
        app: todo-api
    spec:
      containers:
        - name: todo-api
          image: <ACR_NAME>.azurecr.io/todo-backend:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /swagger/index.html
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
            failureThreshold: 10
---
apiVersion: v1
kind: Service
metadata:
  name: todo-api
spec:
  type: ClusterIP
  selector:
    app: todo-api
  ports:
    - port: 5000
      targetPort: 8080
